--- a/content_aggregator/templates/index.html
+++ b/content_aggregator/templates/index.html
@@ -1,26 +1,22 @@
 {% load django_browser_reload %}
 {% load static %}
 
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="{% static 'main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
 </head>
-
 <body>
-    <div class="App">
-        <header class="App-header">
-            <img src="{% static 'Octocat.png' %}" class="App-logo" alt="logo" />
-            <p>
-                GitHub Codespaces <span class="heart">♥️</span> Django
-            </p>
-            <p class="small">
-                Edit <code>content_aggregator/templates/index.html</code> and see changes live!
-            </p>
-        </header>
+    <div class="header">
+        <h1>Welcome to {{ title }}</h1>
+    </div>
+    <div class="content">
+        <p>This is a content aggregator site. Check out the latest articles <a href="/articles/">here</a>.</p>
+        <form>
+            <input type="text" id="url" name="url" placeholder="Enter URL here">
+            <input type="submit" value="Extract Data">
+        </form>
     </div>
 </body>
-
 </html>
