--- a/content_aggregator/static/main.css
+++ b/content_aggregator/static/main.css
@@ -11,5 +11,9 @@ body {
   text-align: center;
 }
 .content {
-  margin: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
