--- a/content_aggregator/templates/index.html
+++ b/content_aggregator/templates/index.html
@@ -1,13 +1,5 @@
-{% load django_browser_reload %}
-{% load static %}
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ title }}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     <div class="header">
         <h1>Welcome to {{ title }}</h1>
     </div>
@@ -18,5 +10,4 @@
             <input type="submit" value="Extract Data">
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
