--- a/content_aggregator/templates/article_detail.html
+++ b/content_aggregator/templates/article_detail.html
@@ -1,14 +1,14 @@
-<!-- article_detail.html -->
+<!-- aggregation_detail.html -->
 
 {% extends 'base.html' %}
 
-{% block title %}{{ article.title }}{% endblock %}
+{% block title %}{{ aggregation.title }}{% endblock %}
 
 {% block content %}
-    <div class="article">
-        <h1>{{ article.title }}</h1>
-        <p>{{ article.content }}</p>
-        <p>Published on {{ article.pub_date }}</p>
+    <div class="aggregation">
+        <h1>{{ aggregation.title }}</h1>
+        <p>{{ aggregation.content }}</p>
+        <p>Published on {{ aggregation.pub_date }}</p>
         <p>URL: {{ url }}</p>
     </div>
 {% endblock %}
