--- a/content_aggregator/templates/index.html
+++ b/content_aggregator/templates/index.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="jumbotron mt-5">
         <h1 class="display-4">Welcome to Content Aggregator!</h1>
-        <p class="lead">This is a simple content aggregator site. Check out the latest articles here.</p>
+        <p class="lead">This is a simple content aggregator site. Check out the latest aggregations here.</p>
         <hr class="my-4">
         <p>Enter a URL to extract data from:</p>
         <form>
