--- a/content_aggregator/templates/base.html
+++ b/content_aggregator/templates/base.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'previous_aggregations' %}">Previous Aggregations</a>
+                    <a class="nav-link" href="{% url 'aggregation_list' %}">Previous Aggregations</a>
                 </li>
             </ul>
         </div>
