--- a/content_aggregator/templates/base.html
+++ b/content_aggregator/templates/base.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Content Aggregator</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
     </nav>
     {% block content %}
     {% endblock %}
-    <footer class="footer mt-auto py-3 bg-light">
+    <footer class="footer mt-auto py-3 bg-dark">
         <div class="container">
             <span class="text-muted">Place sticky footer content here.</span>
         </div>
