--- a/content_aggregator/templates/index.html
+++ b/content_aggregator/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
+<div class="container bg-dark">
     <div class="jumbotron mt-5">
         <h1 class="display-4">Welcome to Content Aggregator!</h1>
         <p class="lead">This is a simple content aggregator site. Check out the latest aggregations here.</p>
