--- a/content_aggregator/templates/base.html
+++ b/content_aggregator/templates/base.html
@@ -14,16 +14,13 @@
 
 <body class="bg-dark">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Content Aggregator</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Content Aggregator</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'aggregation_list' %}">Previous Aggregations</a>
                 </li>
